src/client/ui/components/shared/layout/Layout.module.css
.Layout__MainContainer {
    display: flex;
    flex-direction: row;
    width: 100vw;
    height: 100vh;
    padding: 18px;
    background-color: #1E1E1E;
}

.Layout__SideBar {
    display: flex;
    gap: 32px;
    flex-direction: column;
    justify-content: center;
    width: 72px;
    height: 100%;
    background: #D4B17D;
    border-top-left-radius: 12px;
    border-bottom-left-radius: 12px;
}

.Layout__Contents {
    width: 100%;
    height: 100%;
    padding: 18px;
    border-top-right-radius: 12px;
    border-bottom-right-radius: 12px;
    background-color: #FFFAF1;
}

.Layout__SideBar__Icons {
    font-size: 32px;
    color: #555555;
    transition: 0.2s all ease;
}

.Layout__SideBar__Icons:hover {
    cursor: pointer;
    color: #000000;
}

